kube/proxy/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  annotations:
    watchDirs: proxy _jslib/server _jslib/logger
spec:
  template:
    spec:
      serviceAccountName: watcher
      containers:
        - name: proxy
          command:
            - node
            - ../_jslib/restarter
          volumeMounts:
            - name: app
              mountPath: /app/proxy
            - name: liblogger
              mountPath: /app/_jslib/logger
            - name: libserver
              mountPath: /app/_jslib/server
            - name: librestarter
              mountPath: /app/_jslib/restarter
        - name: watcher
          image: moz_watcher
          imagePullPolicy: Never
          volumeMounts:
            - name: app
              mountPath: /app/proxy
            - name: watcher
              mountPath: /app/watcher
            - name: liblogger
              mountPath: /app/_jslib/logger
            - name: libserver
              mountPath: /app/_jslib/server
      volumes:
        - name: app
          hostPath:
            path: REPO_DIR/proxy
        - name: watcher
          hostPath:
            path: REPO_DIR/watcher
        - name: liblogger
          hostPath:
            path: REPO_DIR/_jslib/logger
        - name: libserver
          hostPath:
            path: REPO_DIR/_jslib/server
        - name: librestarter
          hostPath:
            path: REPO_DIR/_jslib/restarter
