kube/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: moz_proxy
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app
              mountPath: /app/proxy
      volumes:
        - name: app
          hostPath:
            path: /Users/roger/code/moz/proxy
