kube/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
